    * With multiple results, the user will be directed to a search results page
  * Clarified template clear filter button to say 'clear' instead of '-'
  * HTML sticky description markup no longer shows up on the calendar
  * Clicking on links in comments now opens up a new window or tab
  * Provided links on the show page to edit and show existing templates and groups

== 0.24.5 (January 22, 2013)

* Enhancements
  * Sticky duration and duration_units are now included in the CSV export

* Bug Fix
  * Setting an invalid repeat_amount and then changing the sticky to repeat "none" no longer causes a validation error on the repeat_amount

== 0.24.4 (January 11, 2013)

* Enhancements
  * Gravatars are now displayed on the user index

* Refactoring
  * Added Searchable and Deletable ActiveSupport::Concerns to appropriate models

* Testing
  * Added mail_view gem for easier email templating

== 0.24.3 (January 8, 2013)

* Security Fix
  * Updated Rails to 3.2.11

== 0.24.2 (January 3, 2013)

* Enhancements
  * Updated to Contour 1.1.2
  * Removed deprecated Group Creation JSON API, Groups can now be created by specifying:
    * group[project_id]
    * group[template_id]
    * group[initial_due_date] (optional, defaults to today)
    * group[description] (optional)
    * group[board_id] (optional)
  * Sticky addition/completion emails simplified

* Bug Fix
  * Sticky popups now display the repeat_amount (1,2,3) along with the repeat_unit (day,week,month,year) for repeating stickies

== 0.24.1 (January 3, 2013)

* Security Fix
  * Updated Rails to 3.2.10

== 0.24.0 (January 2, 2013)

* Enhancements
  * Project Changes
    * Major rework of the project show page to better reflect boards and tags
      * This rework is aimed at improving the flexibility of the project page in order to discourage users from using stickies index
      * Contains three views
        * Completed: Completed sorted by due date due date descending, (today into the past)