@@ -13,6 +13,7 @@
   * HTML sticky description markup no longer shows up on the calendar
   * Clicking on links in comments now opens up a new window or tab
   * Provided links on the show page to edit and show existing templates and groups
+  * Creating stickies from the calendar no longer displays the sticky show popup
 
 == 0.24.5 (January 22, 2013)
 
